fix: Rename api/_app.py to api/app.py for Vercel compatibility
- Vercel requires function names without underscore prefix
- Updated vercel.json to reference api/app.py instead of api/_app.py
- Maintains all frontend functionality for serverless deployment

--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
     "api/index.py": {
       "maxDuration": 10
     },
-    "api/_app.py": {
+    "api/app.py": {
       "maxDuration": 10
     }
   },
@@ -15,7 +15,7 @@
     },
     {
       "src": "/(.*)",
-      "dest": "/api/_app.py"
+      "dest": "/api/app.py"
     }
   ]
 }
